styles/login-components/login.css
.sign-in  {
  display: flex;
  justify-content: center;
  align-items: center;
  /* height: 100vh; */
  padding: 2rem;
}

.sign-in__container {
  position: relative;
  display: flex;
  flex-direction: column;
  background: var(--clr-light);
  width: 100%;
  border-radius: 16px;
  overflow: hidden;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
}

.welcome-back {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  flex: 1;
  background: var(--clr-blue700);
  color: var(--clr-light);
  padding: 2rem;
  padding-top: 4rem;
}

.welcome-back__content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.welcome-back h1 {
  font-size: var(--size-4xl);
  margin-bottom: 0.5rem;
}

.welcome-back p {
  font-size: var(--size-lg);
  text-align: center;
  margin-bottom: 2rem;
  max-width: 45ch;
}

.form-section {
  flex: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.form-section h2 {
  letter-spacing: -0.05em;
  margin-bottom: 2rem;
  color: var(--clr-blue700);
  text-align: center;
  font-size: var(--size-3xl);
}

form {
  display: flex;
  flex-direction: column;
}

form .form-group {
  margin-bottom: 1rem;
}

form .form-group label {
  margin-bottom: 0.5rem;
  display: block;
  color: var(--clr-blue700);
  font-weight: 600;
}

form .form-group input {
  width: 100%;
  padding: 1rem;
  border: 1px solid var(--clr-blue700-light);
  border-radius: 8px;
}

input {
  color: var(--clr-blue700);
  font-weight: 500;
}

input:focus {
  outline-color: var(--clr-blue700);
}

input::placeholder {
  font-weight: 400;
  color: var(--clr-blue700-light);
}

form button {
  margin-top: 1rem;
}

.back-button {
  position: absolute;
  top: 0;
  left: 0;
  margin: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  border: 2px solid var(--clr-blue700);
  color: var(--clr-blue700);
  text-decoration: none;
  font-size: var(--size-3xl);
  font-weight: 500;
  width: 45px;
  height: 45px;
  border-radius: 50%;
  transition: all 0.3s;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

.back-button:hover {
  background-color: var(--clr-blue700);
  color: var(--clr-light);
  border: 2px solid white;
}

/* xxs-screens */
@media (min-width: 320px) {
  
}

/* xs-screens */
@media (min-width: 475px) {

}

/* sm-screens */
@media (min-width: 640px) {
  .login__back {
    font-size: var(--size-base);
  }
  
  .login__arrow {
    width: var(--size-base);
  }
}

/* md-screens */
@media (min-width: 768px) {
  .back-button {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    border: 2px solid var(--clr-blue700);
    color: var(--clr-blue700);
    text-decoration: none;
    font-size: var(--size-3xl);
    font-weight: 500;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    transition: all 0.3s;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
  }

  .sign-in__container {
    flex-direction: row;
  }

  .welcome-back {
    padding-top: 2rem;
  }

  .welcome-back h1 {
    font-size: var(--size-4xl);
    margin-bottom: 1rem;
  }

  .form-section {
    flex: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 2rem;
  }

  .sign-in__return {
    display: flex;
  }
}

/* lg-screens */
@media (min-width: 1024px) {

}

/* xl-screens */
@media (min-width: 1280px) {

}

/* 2xl-screens */
@media (min-width: 1536px) {

}

